<resources>
    <string name="app_name">TimeLog</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_task">Add task</string>
    <string name="action_edit_task">Edit task</string>
    <string name="action_record">Start task</string>
    <string name="action_pause">Start break</string>
    <string name="action_stop">Stop task</string>
    <string name="action_remove_task">Remove task</string>
    <string name="task_subtask_count_singular">%d subtask</string>
    <string name="task_subtask_count_plural">%d subtasks</string>
    <string name="drawer_item_tasks">Tasks</string>
    <string name="drawer_item_yesterday">Yesterday</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_today">Today</string>
    <string name="drawer_item_lastWeek">Last week</string>
    <string name="drawer_item_thisWeek">This week</string>
    <string name="drawer_item_lastMonth">Last month</string>
    <string name="drawer_item_thisMonth">This month</string>
    <string name="drawer_item_year">Year</string>
    <string name="drawer_item_period">Period</string>
</resources>
